--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </select>
             <input type="number" id="druhe" placeholder="Druhé číslo" required>
             <button type="button" onclick="calculate()">Spočítat</button>
+            <p id="vysledek"></p>
         </form>
     </div>
 
