--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form id="calcForm">
             <input type="number" id="prvni" placeholder="První číslo" required>
             <select id="operace">
-                <option value="scitani">Sčítání (+)</option>´
+                <option value="scitani">Sčítání (+)</option>
                 <option value="odecitani">Odečítání (-)</option>
                 <option value="nasobeni">Násobení (x)</option>
                 <option value="deleni">Dělení (÷)</option>
